--- a/src/main/resources/templates/admin/users/list.html
+++ b/src/main/resources/templates/admin/users/list.html
@@ -1,10 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
-<head >
-    <meta charset="UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+>
+<head th:replace="fragments/header :: static (pageTitle='用户管理')">
+    <meta charset="UTF-8"/>
     <title>Title</title>
 </head>
 <body>
+    <div th:replace="fragments/header :: nav-header"></div>
 
+    <div th:replace="fragments/header :: sidebar"></div>
+
+    <div class="main col-sm-offset-2 col-lg-offset-2 col-sm-10 col-lg-10">
+        <ol class="breadcrumb">
+            <li><a href="#">系统管理</a></li>
+            <li><a href="#" th:href="@{/users/manager}">用户管理</a></li>
+        </ol>
+
+        <div class="col-sm-12 col-lg-12">
+            <form class="form-search form-inline" th:action="@{/users/manager}" th:object="${user}" id="searchForm">
+                <input type="hidden" id="pageNum" name="pageNum"/>
+                <input class="form-control col-sm-3 col-sm-offset-1 col-lg-offset-1"
+                       type="text" name="loginName" th:value="*{loginName}" placeholder="请输入登录名称"/>
+                <input class="form-control col-sm-3 col-sm-offset-1 col-lg-offset-1"
+                       type="text" name="email" th:value="*{email}" placeholder="请输入邮箱"/>
+                <a class="btn btn-primary col-sm-offset-1 col-lg-offset-1" href="javascript:void(0)" onclick="doQuery()">查询</a>
+                <a class="btn btn-default" href="javascript:void(0)" onclick="doReset()">重置</a>
+            </form>
+        </div>
+        <div class="col-sm-12 col-lg-12" style="margin-top: 1%;">
+            <a class="btn btn-primary" href="javascript:void(0)" onclick="doAddUser()">添加</a>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th th:text="登录名称"></th>
+                        <th th:text="邮箱"></th>
+                        <th th:text="角色"></th>
+                        <th th:text="创建时间"></th>
+                        <th th:text="上次登录时间"></th>
+                        <th th:text="操作"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="user : ${page.resultList}">
+                        <td th:text="${user.loginName}"></td>
+                        <td th:text="${user.email}"></td>
+                        <td th:if="${#lists.isEmpty(user.roles)}"></td>
+                        <td th:each="role : ${user.roles}">
+                            <span th:with="roleId=${role.id}" th:text="${role.roleName}"></span>
+                        </td>
+                        <td th:text="${#dates.format(user.createTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                        <td th:text="${user.lastLogin}"></td>
+                        <td th:each="role : ${user.roles}" th:with="roleId=${role.id}">
+                            <span><a href="javascript:void(0)" th:onclick="'javascript:doEditUser(\''+${user.id}+'\',\''+${user.loginName}
+                                +'\',\''+${user.email}+'\',\''+${roleId}+'\');'">编辑</a></span>
+                            <span>|</span>
+                            <span><a href="javascript:void(0)" th:onclick="'javascript:doDeleteUser(\''+${user.id}+'\');'">删除</a></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div th:replace="fragments/page :: page"></div>
+
+    </div>
+
+
+    <!-- 模态框（Modal） -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-hidden="true">×
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">
+                        编辑用户
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <form id="userForm" class="form-horizontal" role="form">
+                        <input type="hidden" id="id" name="id" />
+                        <div class="form-group">
+                            <label for="loginName" class="col-sm-2 control-label">登录名称</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="loginName" name="loginName" placeholder="请输入名字"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="col-sm-2 control-label">邮箱</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="email" name="email" placeholder="请输入邮箱"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="roles" class="col-sm-2 control-label">角色</label>
+                            <div class="col-sm-10">
+                                <select id="roels" name="roles" class="form-control">
+                                    <option value="">请选择</option>
+                                    <option th:each="role : ${roles}" th:value="${role.id}"
+                                        th:text="${role.roleName}"></option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default"
+                            data-dismiss="modal">关闭
+                    </button>
+                    <a href="javascript:void(0)" class="btn btn-primary" onclick="doSaveUser()">
+                        提交
+                    </a>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+
+    <div th:replace="fragments/header :: footer"></div>
+<script type="text/javascript" src="../../../static/js/admin/users/list.js"
+    th:src="@{/js/admin/users/list.js}"></script>
 </body>
 </html>
