--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,50 +2,117 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
         xmlns:th="http://www.thymeleaf.org"
         xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" data-th-fragment="header">
-<head data-th-fragment="static (pageTitle)">
-    <meta charset="UTF-8">
-    <!--移动设备优先-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head th:fragment="static (pageTitle)">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <!--CSRF-->
-    <meta name="_csrf" th:content="${_csrf.token}">
-    <meta name="_csrf_header" th:content="${_csrf.headerName}">
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 
-    <title th:text="${pageTitle}">Title</title>
+    <title th:text="${pageTitle}"></title>
 
-    <link href="../../static/css/font-awesome.css" th:href="@{/css/font-awesome.css}" rel="stylesheet">
+    <link rel="shortcut icon" href="../../static/images/favicon.ico" th:href="@{/images/favicon.ico}" type="image/x-icon" />
 
-    <link href="../../static/lib/bootstrap/bootstrap.min.css" th:href="@{/lib/bootstrap/bootstrap.min.css}" rel="stylesheet">
+    <link href="../../static/lib/css/font-awesome.css" th:href="@{/lib/css/font-awesome.css}" rel="stylesheet"/>
 
-    <link href="../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet">
+    <link href="../../static/lib/bootstrap/bootstrap.min.css" th:href="@{/lib/bootstrap/bootstrap.min.css}" rel="stylesheet"/>
 
+    <link href="../../static/lib/sweetAlert/sweetalert2.min.css" th:href="@{/lib/sweetAlert/sweetalert2.min.css}" rel="stylesheet"/>
+
+    <link href="../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"/>
 
     <script type="text/javascript" src="../../static/lib/require.js" th:src="@{/lib/require.js}"></script>
     <script type="text/javascript" src="../../static/js/main.js" th:src="@{/js/main.js}"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark fix-top nav-header">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-th-fragment="nav-header">
         <div class="container">
-            <a class="navbar-brand" href="/" th:href="@{/}">SachinBlog</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/" th:href="@{/}">主页</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/" th:href="@{/}">最新</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/" th:href="@{/}">最热</a>
-                </li>
-
-                <form class="form-inline">
-                    <input class="form-control" type="text" placeholder="Search">
-                    <button class="btn btn-info" type="submit">搜索</button>
-                </form>
+            <ul class="navbar-header">
+                <a class="navbar-brand" href="/" th:href="@{/}">SachinBlog</a>
             </ul>
+
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Search"/>
+                    <span class="input-group-append">
+                        <button class="btn btn-default" type="submit">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </span>
+                </div>
+            </form>
+
+
+            <div>
+            <!--如果登录了-->
+            <ul class="nav navbar-nav navbar-right" sec:authorize="isAuthenticated()">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" th:href="@{'/u/'+${#authentication.name}}">
+                        <span sec:authentication="name"></span>
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" th:href="@{'/u/'+${#authentication.name}}">个人主页</a></li>
+                        <li><a href="#" th:href="@{'/u/'+${#authentication.name}+'/profile'}">个人设置</a></li>
+                        <li class="divider"></li>
+                        <li><a class="dropdown-item" href="#">退出登录</a></li>
+                    </ul>
+                </li>
+            </ul>
+            </div>
         </div>
     </nav>
 
+    <div class="container-fluid sidebar col-sm-2 col-lg-2" data-th-fragment="sidebar">
+        <ul id="main-nav" class="nav nav-tabs nav-stacked" style="">
+            <!--<li class="active">
+                <a href="#">
+                    <i class="fa fa-th-large"></i>
+                    首页
+                </a>
+            </li>-->
+            <li>
+                <a href="#systemSetting" class="nav-header collapsed" data-toggle="collapse">
+                    <i class="fa fa-cog"></i>
+                    系统管理
+                    <span class="pull-right fa fa-chevron-down"></span>
+                </a>
+                <ul id="systemSetting" class="nav nav-list collapse secondmenu" style="height: 0px;">
+                    <li><a href="#" th:href="@{/users/manager}"><i class="fa fa-user"></i>用户管理</a></li>
+                    <li><a href="#" ><i class="fa fa-th-list"></i>菜单管理</a></li>
+                    <li><a href="#" th:href="@{/roles/manager}"><i class="fa fa-asterisk"></i>角色管理</a></li>
+                    <li><a href="#"><i class="fa fa-edit"></i>修改密码</a></li>
+                    <li><a href="#"><i class="fa fa-eye-open"></i>日志查看</a></li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="./charts.html">
+                    <i class="fa fa-calendar"></i>
+                    图表统计
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fa fa-fire"></i>
+                    关于系统
+                </a>
+            </li>
+
+        </ul>
+    </div>
+
+    <div class="container">
+        内容区
+    </div>
+
+    <footer data-th-fragment="footer">
+        <script type="text/javascript" th:inline="javascript">
+            var basePath = /*[[@{/}]]*/;
+        </script>
+
+    </footer>
 </body>
 
 </html>
